platform/wasm/src/tests/snapshots/wasm__tests__tooltip__math_align_paren_tooltips.snap
---
source: wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      12,
      26
    ],
    "items": 8
  }
]
