platform/wasm/src/tests/snapshots/wasm__tests__tooltip__math_empty_sub_call_tooltips.snap
---
source: wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      14,
      20
    ],
    "items": 6
  }
]
