platform/wasm/src/tests/snapshots/wasm__tests__tooltip__math_unclosed_quote_tooltips.snap
---
source: wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      21
    ],
    "items": 2
  }
]
